# WhisperCast

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sample.py
.github/workflows/: python-publish.yml
src/whispercast/: __init__.py  _version.py  cli.py  config.py
src/whispercast/core/: __init__.py  diarization.py  processing.py  transcription.py
tests/: test_cli.py  test_config.py
tests/core/: __init__.py  test_diarization.py  test_processing.py  test_transcription.py
